GCP/k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: api
  labels:
    app: api
    app.kubernetes.io/part-of: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - name: http
      port: 8000
      targetPort: http
